# stonehenge-wiki

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  INSTRUCTION.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
llm-wiki/: .env.example  AGENTS.md  Permission.json  README.md  config.json
llm-wiki/question/: group-demo.md
logs/: interaction.md
logs/trace/: self-validation.md
result/: output.md
rust-cli/: Cargo.toml  README.md
rust-cli/src/: lib.rs
scripts/: check_doc_consistency.py  package_submission.py
stonehenge-wiki/: .env.example  AGENTS.md  README.md  config.json
stonehenge-wiki/question/: group-demo.md
work/: INSTRUCTION.md  main.py  requirements.txt
work/llm_wiki/: DESIGN.md  __init__.py  answerer.py  chunks.py  cli.py  config.py  evaluation.py  execution.py  extractors.py  importer.py  indexer.py  llm.py  models.py  office_bridge.py  platform.py  presentations.py  readiness.py  repair.py  reports.py  security.py  server.py  source_risk.py  store.py  wiki_compiler.py  wiki_sections.py
work/scripts/: build_skill_cli.sh  health_check.sh  server.sh  validate_answers.py
work/skills/stonehenge-wiki/cli/: Cargo.toml  README.md
work/skills/stonehenge-wiki/cli/src/: lib.rs
work/stonehenge_wiki/: DESIGN.md  __init__.py  answerer.py  api_contract.py  cli.py  cli_io.py  config.py  contract_checks.py  evaluation.py  execution.py  extractors.py  formatting.py  importer.py  indexer.py  llm.py  models.py  office_bridge.py  platform.py  readiness.py  (+8 more)
(+44 files in other folders)
